@@ -91,7 +91,6 @@ struct http_response_handler *response_handlers;
 unsigned short n_response_handlers;
 
 extern char *get_header_value(struct http_request *request, char *name);
-extern void print_clf_status(struct tcp_connection *connection, 
-                             char *status_code, size_t length);
+extern void http_print_clf_status(struct http_request *request);
 
 #endif //HTTP_COMMON_H
